@@ -8,14 +8,15 @@ rule helpers__fastqc:
         "__environment__.yml"
     container:
         docker["helpers"]
-    threads: lambda wc, attempt: get_resources(wc, attempt, escalation_order=["small", "medium"])["cpus"]
+    threads: lambda wc: get_resources(wc, escalation_order=["small", "medium", "large"])["cpus"]
     resources:
-        time = lambda wc, attempt: get_resources(wc, attempt, escalation_order=["small","medium"])["time"],
-        mem_per_cpu = lambda wc, attempt: get_resources(wc, attempt, escalation_order=["small","medium"])["mem_mb"],
-        cpu_per_task = lambda wc, attempt: get_resources(wc, attempt, escalation_order=["small","medium"])["cpus"],
-        partition = lambda wc, attempt: get_resources(wc, attempt, escalation_order=["small","medium"])["partition"],
+        #runtime=lambda wc: get_resources(wc, escalation_order=["small","medium","large"])["runtime"],
+        runtime=1,
+        mem_mb=lambda wc: get_resources(wc, escalation_order=["small","medium","large"])["mem_mb"],
+        cpu_per_task=lambda wc: get_resources(wc, escalation_order=["small","medium","large"])["cpus"],
+        partition=lambda wc: get_resources(wc, escalation_order=["small","medium","large"])["partition"],
     log:
         "{prefix}_fastqc.log"
-    retries: 2  # will escalate two positions through the escalation order (meaning, set this number to the length of above escalation order...)
+    retries: 3  # will escalate three positions through the escalation order (meaning, set this number to the length of above escalation order...)
     shell:
         "fastqc {input} 2> {log} 1>&2"
